fix horizontal scroll issue

--- a/src/styles/feedback.scss
+++ b/src/styles/feedback.scss
@@ -1,5 +1,6 @@
 .feedback {
   padding-top: var(--amplify-space-xl);
+  overflow: hidden;
 }
 
 .vote-response {
